--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -44,8 +44,8 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<h2>Alpha</h2>
-					<p>Another fine responsive site template freebie by HTML5 UP.</p>
+					<h2>Google</h2>
+					<p>gcs2기</p>
 					<ul class="actions special">
 						<li><a href="#" class="button primary">Sign Up</a></li>
 						<li><a href="#" class="button">Learn More</a></li>
@@ -57,11 +57,10 @@
 
 					<section class="box special">
 						<header class="major">
-							<h2>Introducing the ultimate mobile app
+							<h2>멋지게 성공 해봅시다
 							<br />
-							for doing stuff with your phone</h2>
-							<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
-							adipiscing nunc adipiscing. Condimentum turpis massa.</p>
+							웹페이지 만들줄 몰라서 템플릿 코드 수정했어요</h2>
+							<p>서준, 준혁, 예람, 세현, 상현, 영빈, 창민, 태완</p>
 						</header>
 						<span class="image featured"><img src="../static/images/pic01.jpg" alt="" /></span>
 					</section>
